adicionando tag form

--- a/styles/style.css
+++ b/styles/style.css
@@ -55,6 +55,14 @@ body *{
     width: 35vw;
  }
 
+.form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 265px;
+}
+
  .card-login{
     width: 60%;
     display: flex;
